Update branding and MongoDB configuration
- Add ApexView Capital favicon and logo
- Remove Lovable branding from meta tags
- Update deployed application URL in README
- Configure MongoDB Atlas connection with apex database
- Install helmet and morgan middleware packages
- Fix dotenv path to load server/.env correctly
- Update deprecated MongoDB connection options

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,12 @@
-MONGODB_URI=mongodb://localhost:27017/portfolio
-JWT_SECRET=your-secret-key-change-this-in-production
+# MongoDB Atlas Connection String
+# Special characters in password must be URL-encoded: # = %23, < = %3C, > = %3E
+# Example: mongodb+srv://apex:password@cluster0.abc123.mongodb.net/apex?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://apex:kfCwnbuHq5aaQVmm@cluster0.aapmhyq.mongodb.net/apex?retryWrites=true&w=majority
+# JWT Secret - Change this to a random secure string
+JWT_SECRET=your-super-secret-jwt-key-change-this-to-random-string-in-production
+
+# Server Port
 PORT=5000
+
+# Environment
 NODE_ENV=development
